<resources>
    <string name="app_name">MangoAndroidTest</string>
    <string name="phone_number">Phone number</string>
    <string name="btn_next">Next</string>
    <string name="hint_enter_verification_code">Enter verification code</string>
    <string name="btn_submit">Submit</string>
    <string name="title_auth">Authorization</string>
    <string name="title_verify_code">Verification</string>
    <string name="title_register">Register</string>
    <string name="btn_register">Register</string>
    <string name="hint_username">Username</string>
    <string name="hint_name">Name</string>
    <string name="hint_phone">Phone</string>
    <string name="format_status">Status: %s</string>
    <string name="item_title_edit_profile">Edit profile</string>
    <string name="btn_save">Save</string>
    <string name="hint_birthday">Birthday</string>
    <string name="hint_city">City</string>
    <string name="hint_vk">VK</string>
    <string name="hint_instagram">Instagram</string>
    <string name="hint_status">Status</string>
    <string name="btn_upload_photo">upload photo</string>
</resources>